--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
+    "start": "pm2 start index.js",
+    "stop": "pm2 stop index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
+    "pm2": "^4.5.6",
     "polka": "^0.5.2",
     "winston": "^3.3.3"
   }
